--- a/src/App.css
+++ b/src/App.css
@@ -137,14 +137,56 @@ html, body, #root, .app, .map-container {
 }
 
 /* CARD DOCK */
+.card-dock-wrapper .user-hint {
+  text-transform: uppercase;
+  background: rgba(244, 253, 255);
+  color: rgba(59, 123, 138);
+  font-size: 16px;
+}
+.card-dock-wrapper .user-hint .trigger-icon {
+  stroke: rgba(59, 123, 138);
+  stroke-width: 8;
+  width: 16px;
+}
+
 .scroll-hint {
   text-align: center;
+  position: absolute;
+  /* center hint above the cards - keep in sync with width */
+  left: calc(50% - 100px);
+  width: 200px; 
+  top: -40px;
+  height: 40px;
+}
+.scroll-hint.dismissed {
+  top: 0;
+  transition: top ease 0.8s;
 }
 .scroll-hint .content {
-  color: rgba(59, 123, 138);
-  background: rgba(244, 253, 255);
-  display: inline;
-  padding: 22px;
+  padding: 12px;
+}
+
+.selection-hint {
+  position: absolute;
+  /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
+  top: 100px;
+  right: -230px;
+  width: 230px;
+  transition: right ease 0.8s;
+}
+.selection-hint .content {
+  padding: 20px;
+}
+.selection-hint .content svg {
+  position: absolute;
+  top: 44%;
+  right: 20px;
+}
+.selection-hint .content .maximum {
+  display: block;
+}
+.selection-hint.dismissed {
+  right: 0;
 }
 
 .card-dock-wrapper {
@@ -167,6 +209,8 @@ html, body, #root, .app, .map-container {
   /* without width explicitly set, fixed table-layout won't apply */
   width: 100%;
   table-layout: fixed;
+  /* so it appears over dismissed user-hints */
+  position: relative;
   border-spacing: 0px;
   box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
   /* box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 4px; */
@@ -350,6 +394,27 @@ tr:nth-child(even) {background-color: #ffffff;}
   .card-dock-container.maximized {
     /* position: absolute;
     top: 100vh; */
+  }
+
+  .scroll-hint {
+    left: calc(50vw - 100px);
+  }
+
+  .selection-hint {
+    height: 110px;
+    top: 0;
+    /* top: -110px; */
+    left: calc(50vw - 148px);
+    /* right: unset; */
+    width: 286px;
+    transition: top ease 0.8s;
+  }
+  .selection-hint.sole-hint {
+    top: -110px;
+  }
+  .selection-hint.sole-hint.dismissed {
+    top: 0;
+    /* right: calc(50% - 148px); */
   }
 
   .card-dock thead td {
