--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,9 @@
   cursor: default;
   font-family: sofia-pro, sans-serif;
   font-weight: 400;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 html, body, #root, .app, .map-container {
@@ -136,230 +139,431 @@ html, body, #root, .app, .map-container {
   font-weight: 700;
 }
 
-/* CARD DOCK */
-.card-dock-wrapper .user-hint {
-  text-transform: uppercase;
-  background: rgb(244, 253, 255);
-  color: rgb(59, 123, 138);
-  font-size: 16px;
-}
-.card-dock-wrapper .user-hint .trigger-icon {
-  stroke: rgb(59, 123, 138);
-  stroke-width: 8;
-  width: 16px;
-}
+$FS-card-width: 300px;
+$color-past: rgba(0,80,92,.8);
+$color-ongoing: rgba(175,105,12,.8);
+$color-proposed: rgba(223,70,73,.8);
 
-.scroll-hint {
-  text-align: center;
-  position: absolute;
-  /* center hint above the cards - keep in sync with width */
-  left: calc(50% - 100px);
-  width: 200px; 
-  top: -40px;
-  height: 40px;
-}
-.scroll-hint.dismissed {
-  top: 0;
-  transition: top ease 0.8s;
-}
-.scroll-hint .content {
-  padding: 12px;
-}
+/*{ CARD DOCK */
+.card-dock-container { //card-dock-wrapper
+  .trigger-icon { width: 4px }
+  
+  background-color: lightseagreen;
 
-.selection-hint {
-  position: absolute;
-  /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
-  top: 100px;
-  right: -230px;
-  width: 230px;
-  transition: right ease 0.8s;
-}
-.selection-hint .content {
-  padding: 20px;
-}
-.selection-hint .content svg {
-  position: absolute;
-  top: 44%;
-  right: 20px;
-}
-.selection-hint .content .maximum {
-  display: block;
-}
-.selection-hint.dismissed {
-  right: 0;
-}
-
-.card-dock-wrapper {
   z-index: 5;
   position: relative;
   /* dock background initially just off-screen, appears when user scrolls up */
   top: 100vh;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 3px;
-  background: white;
-}
-
-.card-dock-wrapper .card-dock-container {
-  position: relative;
-  /* top of card should stick up above window bottom */
-  top: -100px;
-}
-
-.card-dock-container table {
-  /* without width explicitly set, fixed table-layout won't apply */
-  width: 100%;
-  table-layout: fixed;
-  /* so it appears over dismissed user-hints */
-  position: relative;
-  border-spacing: 0px;
-  box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
-  /* box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 4px; */
-}
-
-.card-dock-container.card-count-1 {
-  min-width: 300px;
-  max-width: 325px;
-}
-.card-dock-container.card-count-2 {
-  min-width: 600px;
-  max-width: 650px;
-}
-.card-dock-container.card-count-3 {
-  min-width: 900px;
-  max-width: 975px;
-}
-
-.card-dock-container.maximized {
-  /* TODO: is there a maximized dock distinction? */
-  /* top: 100vh; */
-  /* allows scrolling of cards */
-  /* position: relative; */
-  transition: top 0.6s ease;
-}
-
-tr:not(:first-child) td:not(:first-child) {
-  /* for a subtle division between cards */
-  border-left: solid #f2f2f2 1px;
-}
-
-thead td {
-  background: white;
-  font-size: 14px;
-  line-height: 21px;
-  letter-spacing: 0.03em;
-  padding: 12px 12px 8px 8px;
-  word-wrap: break-word;
-  /* so trigger has a positioned element to hang onto */
-  position: relative;
-  font-weight: 700;
-}
-
-thead td.name {
-  border-top-width: 8px;
-  border-top-style: solid;
-}
-thead td.name.past {
-  border-top-color: rgba(0,80,92,.8);
-}
-thead td.name.ongoing {
-  border-top-color: rgba(175,105,12,.8);
-}
-thead td.name.proposed {
-  border-top-color: rgba(223,70,73,.8);
-}
-thead td.name:first-child {
-  border-top-left-radius: 3px;
-}
-thead td.name:last-child {
-  border-top-right-radius: 3px;
-}
-
-thead td .remove-icon {
-  position: absolute;
-  width: 14px;
-  top: 6px;
-  right: 6px;
-}
-
-/* TODO: mixin? (dry) */
-.card-dock .property-name,
-.card-dock .property-location-title {
-  font-weight: 300;
-  font-size: 12px;
-  letter-spacing: 0.1em;
-  text-transform: uppercase;
-}
-.card-dock .property-location-title {
-  padding-top: 3px;
-}
-
-.property-cell.expandible .property-name {
-  /* make room for trigger-icon */
-  padding-right: 10px;
-}
-
-.property-cell.feature-header {
-  font-weight: 700;
-  text-align: center;
-}
-.property-cell.feature-header .property-value {
-  padding: 0;
-}
-
-/* location titles should only be given a single line */
-.card-dock .property-location-title {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.location-cell-content:not(:last-child) {
-  padding-bottom: 5px;
-}
-
-/* TODO: mixin? (dry) */
-.property-value {
-  font-size: 14px;
-  padding-top: 5px;
-  overflow: hidden;
   height: 100%;
-}
-.property-cell.expandible .property-value:not(.expanded) {
-  /* transition: max-height .1s cubic-bezier(.23,1,.32,1); */
-  transition: max-height .2s ease-out;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 3px;
+  // background: white;
+
+  .user-hint {
+    text-transform: uppercase;
+    background: rgb(244, 253, 255);
+    color: rgb(59, 123, 138);
+    font-size: 16px; //FS
+    .trigger-icon {
+      stroke: rgb(59, 123, 138);
+      stroke-width: 8; //FS
+      width: 16px; //FS
+    }
+    
+    .scroll-hint {
+      text-align: center;
+      position: absolute;
+      /* center hint above the cards - keep in sync with width */
+      left: calc(50% - 100px);
+      width: 200px; 
+      top: -40px;
+      height: 40px;
+      .dismissed {
+        top: 0;
+        transition: top ease 0.8s;
+      }
+      .content {
+        padding: 12px;
+      }
+    }
+    
+    .selection-hint {
+      position: absolute;
+      /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
+      top: 100px;
+      right: -230px;
+      width: 230px;
+      transition: right ease 0.8s;
+      
+      &.dismissed {
+        right: 0;
+      }
+      .content {
+        padding: 20px;
+        svg {
+          position: absolute;
+          top: 44%;
+          right: 20px;
+        }
+        .maximum {
+          display: block;
+        }
+      }
+    }
+  }
   
-  max-height: 35px;
-}
-.property-cell.expandible .property-value.expanded {
-  /* TODO: fix to 100% (stab) */
-  transition: max-height .4s ease-in;
-  max-height: 900px;
-  /* overflow-y: scroll; */
+  .card-dock { //card-dock-container
+    height: 100%;
+    margin-left: calc((100vw - 900px)/2); //FS
+    &.card-count-1 {
+      width: $FS-card-width * 1;
+    }
+    &.card-count-2 {
+      width: $FS-card-width * 2;
+    }
+    &.card-count-3 {
+      width: $FS-card-width * 3;
+    }
+
+    background-color: lightskyblue;
+
+    .card-table { //table.card-dock
+      position: relative;
+      /* top of card should stick up above window bottom */
+      top: -100px; //FS
+      box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
+
+      background: lightsalmon;
+
+      .row {
+        height: 100%; //?
+        display: flex;
+      }
+      
+      .card {
+        // width: $FS-card-width; //FS
+        flex: 1;
+        // height: 100%;
+        display: inline-block;
+        vertical-align: top;
+      }
+
+      .cell {
+        // don't add different side padding for different cell types
+        // or cells won't align vertically
+        padding: 10px; //FS
+        // display: inline-block;
+        // box-sizing: border-box;
+        height: 100%; //?
+
+        .property-name,
+        .location-title {
+          font-weight: 300;
+          font-size: 12px;
+          letter-spacing: 0.1em;
+          text-transform: uppercase;
+        }
+        .location-title {
+          padding-top: 3px;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden;
+        }
+      }
+
+      .row.header {
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
+        height: 100px;
+
+        .card {
+          border-top-width: 8px;
+          border-top-style: solid;
+          &.past {
+            border-top-color: $color-past;
+          }
+          &.ongoing {
+            border-top-color: $color-ongoing;
+          }
+          &.proposed {
+            border-top-color: $color-proposed;
+          }
+          &:first-child {
+            border-top-left-radius: 3px;
+          }
+          &:last-child {
+            border-top-right-radius: 3px;
+          }
+          &:not(first-child) {
+            // to compensate for border-left added to other cells
+            // width: $FS-card-width + 1px;
+          }
+          
+          .cell {
+            padding-top: 20px; //FS
+            // height: 100px;
+            font-size: 14px; //FS
+            line-height: 21px; //FS
+            letter-spacing: 0.03em;
+            word-wrap: break-word;
+            /* so trigger has a positioned element to hang onto */
+            position: relative;
+            font-weight: 700;
+            
+            .remove-icon {
+              position: absolute;
+              width: 14px; //FS
+              top: 6px; //FS
+              right: 6px; //FS
+            }
+          }
+        }
+      }
+      
+
+    }
+      
+      
+    
+    /* alternating row colors */
+    .row:nth-child(even) {background-color: #f7f7f7;} 
+    .row:nth-child(odd) {background-color: #ffffff;}
+    .row:not(:first-child) .card:not(:first-child) .cell {
+      /* for a subtle division between cards 
+         compensate headers with added 1px */
+      border-left: solid black 1px; // #f2f2f2 1px;
+  }
+  }
 }
 
-/* TODO: mixin? (dry) */
-.property-cell .trigger-icon {
-  position: absolute;
-  width: 14px;
-  right: 5px;
-  top: 9px;
-}
 
-.property-cell {
-  vertical-align: top;
-  padding: 8px;
-  position: relative;
-}
+// ???????????????????????????????????????????????????????????????
 
-.property-value a {
-  display: block;
-  cursor: pointer;
-  padding-bottom: 8px;
-}
+.xxxx {
+  .card-dock-wrapper .user-hint {
+      text-transform: uppercase;
+      background: rgb(244, 253, 255);
+      color: rgb(59, 123, 138);
+      font-size: 16px;
+  }
+  .card-dock-wrapper .user-hint .trigger-icon {
+      stroke: rgb(59, 123, 138);
+      stroke-width: 8;
+      width: 16px;
+  }
 
-/* alternating row colors */
-tr:nth-child(odd) {background-color: #f7f7f7;} 
-tr:nth-child(even) {background-color: #ffffff;} 
+    .scroll-hint {
+      text-align: center;
+      position: absolute;
+      /* center hint above the cards - keep in sync with width */
+      left: calc(50% - 100px);
+      width: 200px; 
+      top: -40px;
+      height: 40px;
+    }
+    .scroll-hint.dismissed {
+      top: 0;
+      transition: top ease 0.8s;
+    }
+    .scroll-hint .content {
+      padding: 12px;
+    }
+
+    .selection-hint {
+      position: absolute;
+      /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
+      top: 100px;
+      right: -230px;
+      width: 230px;
+      transition: right ease 0.8s;
+    }
+    .selection-hint .content {
+      padding: 20px;
+    }
+    .selection-hint .content svg {
+      position: absolute;
+      top: 44%;
+      right: 20px;
+    }
+    .selection-hint .content .maximum {
+      display: block;
+    }
+    .selection-hint.dismissed {
+      right: 0;
+    }
+
+  .card-dock-wrapper {
+      z-index: 5;
+      position: relative;
+      /* dock background initially just off-screen, appears when user scrolls up */
+      top: 100vh;
+      width: 100%;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 3px;
+      background: white;
+  }
+
+  .card-dock-wrapper .card-dock-container {
+      position: relative;
+      /* top of card should stick up above window bottom */
+      top: -100px;
+  }
+
+  .card-dock-container table {
+        /* without width explicitly set, fixed table-layout won't apply */
+        width: 100%;
+        table-layout: fixed;
+        /* so it appears over dismissed user-hints */
+        position: relative;
+        border-spacing: 0px;
+      box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 4px; */
+  }
+
+      .card-dock-container.card-count-1 {
+        min-width: 300px;
+        max-width: 325px;
+      }
+      .card-dock-container.card-count-2 {
+        min-width: 600px;
+        max-width: 650px; 
+      }
+      .card-dock-container.card-count-3 {
+        min-width: 900px;
+        max-width: 975px;
+      }
+
+  .card-dock-container.maximized {
+      /* TODO: is there a maximized dock distinction? */
+      /* top: 100vh; */
+      /* allows scrolling of cards */
+      /* position: relative; */
+      transition: top 0.6s ease;
+  }
+
+  tr:not(:first-child) td:not(:first-child) {
+      /* for a subtle division between cards */
+      border-left: solid #f2f2f2 1px;
+  }
+
+    thead td {
+      background: white;
+      font-size: 14px;
+      line-height: 21px;
+      letter-spacing: 0.03em;
+      padding: 12px 12px 8px 8px;
+      word-wrap: break-word;
+      /* so trigger has a positioned element to hang onto */
+      position: relative;
+      font-weight: 700;
+    }
+
+    thead td.name {
+      border-top-width: 8px;
+      border-top-style: solid;
+    }
+    thead td.name.past {
+      border-top-color: rgba(0,80,92,.8);
+    }
+    thead td.name.ongoing {
+      border-top-color: rgba(175,105,12,.8);
+    }
+    thead td.name.proposed {
+      border-top-color: rgba(223,70,73,.8);
+    }
+    thead td.name:first-child {
+      border-top-left-radius: 3px;
+    }
+    thead td.name:last-child {
+      border-top-right-radius: 3px;
+    }
+
+    thead td .remove-icon {
+      position: absolute;
+      width: 14px;
+      top: 6px;
+      right: 6px;
+    }
+
+  /* TODO: mixin? (dry) */
+  .card-dock .property-name,
+  .card-dock .property-location-title {
+    font-weight: 300;
+    font-size: 12px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
+  .card-dock .property-location-title {
+    padding-top: 3px;
+  }
+
+  .property-cell.expandible .property-name {
+    /* make room for trigger-icon */
+    padding-right: 10px;
+  }
+
+  .property-cell.feature-header {
+    font-weight: 700;
+    text-align: center;
+  }
+  .property-cell.feature-header .property-value {
+    padding: 0;
+  }
+
+  /* location titles should only be given a single line */
+  .card-dock .property-location-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  .location-cell-content:not(:last-child) {
+    padding-bottom: 5px;
+  }
+
+  /* TODO: mixin? (dry) */
+  .property-value {
+    font-size: 14px;
+    padding-top: 5px;
+    overflow: hidden;
+    height: 100%;
+  }
+  .property-cell.expandible .property-value:not(.expanded) {
+    /* transition: max-height .1s cubic-bezier(.23,1,.32,1); */
+    transition: max-height .2s ease-out;
+    
+    max-height: 35px;
+  }
+  .property-cell.expandible .property-value.expanded {
+    /* TODO: fix to 100% (stab) */
+    transition: max-height .4s ease-in;
+    max-height: 900px;
+    /* overflow-y: scroll; */
+  }
+
+  /* TODO: mixin? (dry) */
+  .property-cell .trigger-icon {
+    position: absolute;
+    width: 14px;
+    right: 5px;
+    top: 9px;
+  }
+
+  .property-cell {
+    vertical-align: top;
+    padding: 8px;
+    position: relative;
+  }
+
+  .property-value a {
+    display: block;
+    cursor: pointer;
+    padding-bottom: 8px;
+  }
+
+  /* alternating row colors */
+  tr:nth-child(odd) {background-color: #f7f7f7;} 
+  tr:nth-child(even) {background-color: #ffffff;}
+}
 
 @media (max-width: 650px) {
   /* LEGEND */
