--- a/src/App.scss
+++ b/src/App.scss
@@ -418,235 +418,6 @@ $light-gray: #f7f7f7;
   }
 }
 
-
-// ???????????????????????????????????????????????????????????????
-
-.xxxx {
-  .card-dock-wrapper .user-hint {
-      text-transform: uppercase;
-      background: rgb(244, 253, 255);
-      color: rgb(59, 123, 138);
-      font-size: 16px;
-  }
-  .card-dock-wrapper .user-hint .trigger-icon {
-      stroke: rgb(59, 123, 138);
-      stroke-width: 8;
-      width: 16px;
-  }
-
-    .scroll-hint {
-      text-align: center;
-      position: absolute;
-      /* center hint above the cards - keep in sync with width */
-      left: calc(50% - 100px);
-      width: 200px; 
-      top: -40px;
-      height: 40px;
-    }
-    .scroll-hint.dismissed {
-      top: 0;
-      transition: top ease 0.8s;
-    }
-    .scroll-hint .content {
-      padding: 12px;
-    }
-
-    .selection-hint {
-      position: absolute;
-      /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
-      top: 100px;
-      right: -230px;
-      width: 230px;
-      transition: right ease 0.8s;
-    }
-    .selection-hint .content {
-      padding: 20px;
-    }
-    .selection-hint .content svg {
-      position: absolute;
-      top: 44%;
-      right: 20px;
-    }
-    .selection-hint .content .maximum {
-      display: block;
-    }
-    .selection-hint.dismissed {
-      right: 0;
-    }
-
-  .card-dock-wrapper {
-      z-index: 5;
-      position: relative;
-      /* dock background initially just off-screen, appears when user scrolls up */
-      top: 100vh;
-      width: 100%;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 3px;
-      background: white;
-  }
-
-  .card-dock-wrapper .card-dock-container {
-      position: relative;
-      /* top of card should stick up above window bottom */
-      top: -100px;
-  }
-
-  .card-dock-container table {
-        /* without width explicitly set, fixed table-layout won't apply */
-        width: 100%;
-        table-layout: fixed;
-        /* so it appears over dismissed user-hints */
-        position: relative;
-        border-spacing: 0px;
-      box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
-    /* box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 4px; */
-  }
-
-      .card-dock-container.card-count-1 {
-        min-width: 300px;
-        max-width: 325px;
-      }
-      .card-dock-container.card-count-2 {
-        min-width: 600px;
-        max-width: 650px; 
-      }
-      .card-dock-container.card-count-3 {
-        min-width: 900px;
-        max-width: 975px;
-      }
-
-  .card-dock-container.maximized {
-      /* TODO: is there a maximized dock distinction? */
-      /* top: 100vh; */
-      /* allows scrolling of cards */
-      /* position: relative; */
-      transition: top 0.6s ease;
-  }
-
-  tr:not(:first-child) td:not(:first-child) {
-      /* for a subtle division between cards */
-      border-left: solid #f2f2f2 1px;
-  }
-
-    thead td {
-      background: white;
-      font-size: 14px;
-      line-height: 21px;
-      letter-spacing: 0.03em;
-      padding: 12px 12px 8px 8px;
-      word-wrap: break-word;
-      /* so trigger has a positioned element to hang onto */
-      position: relative;
-      font-weight: 700;
-    }
-
-    thead td.name {
-      border-top-width: 8px;
-      border-top-style: solid;
-    }
-    thead td.name.past {
-      border-top-color: rgba(0,80,92,.8);
-    }
-    thead td.name.ongoing {
-      border-top-color: rgba(175,105,12,.8);
-    }
-    thead td.name.proposed {
-      border-top-color: rgba(223,70,73,.8);
-    }
-    thead td.name:first-child {
-      border-top-left-radius: 3px;
-    }
-    thead td.name:last-child {
-      border-top-right-radius: 3px;
-    }
-
-    thead td .remove-icon {
-      position: absolute;
-      width: 14px;
-      top: 6px;
-      right: 6px;
-    }
-
-    /* TODO: mixin? (dry) */
-    .card-dock .property-name,
-    .card-dock .property-location-title {
-      font-weight: 300;
-      font-size: 12px;
-      letter-spacing: 0.1em;
-      text-transform: uppercase;
-    }
-    .card-dock .property-location-title {
-      padding-top: 3px;
-    }
-
-  .property-cell.expandible .property-name {
-    /* make room for trigger-icon */
-    padding-right: 10px;
-  }
-
-  .property-cell.feature-header {
-    font-weight: 700;
-    text-align: center;
-  }
-  .property-cell.feature-header .property-value {
-    padding: 0;
-  }
-
-  /* location titles should only be given a single line */
-  .card-dock .property-location-title {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-  }
-
-    .location-cell-content:not(:last-child) {
-      padding-bottom: 5px;
-    }
-
-  /* TODO: mixin? (dry) */
-      .property-value {
-        font-size: 14px;
-        padding-top: 5px;
-        overflow: hidden;
-        height: 100%;
-      }
-    .property-cell.expandible .property-value:not(.expanded) {
-      /* transition: max-height .1s cubic-bezier(.23,1,.32,1); */
-      transition: max-height .2s ease-out;
-      
-      max-height: 35px;
-    }
-    .property-cell.expandible .property-value.expanded {
-      /* TODO: fix to 100% (stab) */
-      transition: max-height .4s ease-in;
-      max-height: 900px;
-      /* overflow-y: scroll; */
-    }
-
-  /* TODO: mixin? (dry) */
-    .property-cell .trigger-icon {
-      position: absolute;
-      width: 14px;
-      right: 5px;
-      top: 9px;
-    }
-
-  .property-cell {
-    vertical-align: top;
-    padding: 8px;
-    position: relative;
-  }
-
-  .property-value a {
-    display: block;
-    cursor: pointer;
-    padding-bottom: 8px;
-  }
-
-  /* alternating row colors */
-  tr:nth-child(odd) {background-color: #f7f7f7;} 
-  tr:nth-child(even) {background-color: #ffffff;}
-}
-
 @media (max-width: 650px) {
   /* LEGEND */
   .legend {
@@ -676,85 +447,106 @@ $light-gray: #f7f7f7;
 
   /* DOCK */
   /* for smaller screens, don't "dock" */
-  .card-dock-container,
-  .card-dock-container.maximized {
-    /* position: absolute;
-    top: 100vh; */
+  .card-dock-container {
+    .card-dock {
+      width: 100%;
+
+      &.card-count-1 .card-table {
+        width: 100%;
+        .card {
+          width: 100%;
+          min-width: $FS-card-width;
+          max-width: unset;
+        }
+      }
+      &.card-count-2 .card-table,
+      &.card-count-3 .card-table {
+      }
+    }
   }
 
-  .scroll-hint {
-    left: calc(50vw - 100px);
-  }
 
-  .selection-hint {
-    height: 110px;
-    top: 0;
-    /* top: -110px; */
-    left: calc(50vw - 148px);
-    /* right: unset; */
-    width: 286px;
-    transition: top ease 0.8s;
-  }
-  .selection-hint.sole-hint {
-    top: -110px;
-  }
-  .selection-hint.sole-hint.dismissed {
-    top: 0;
-    /* right: calc(50% - 148px); */
-  }
+  .NOTTT {
+    .card-dock-container,
+    .card-dock-container.maximized {
+      /* position: absolute;
+      top: 100vh; */
+    }
 
-  .card-dock thead td {
-    font-size: 20px;
-    line-height: 32px;
-    height: 80px;
-    /* make room for trigger-icon */
-    padding-right: 40px;
-  }
-  
-  thead td .remove-icon {
-    width: 40px;
-    top: 12px;
-    right: 8px;
-  }
+    .scroll-hint {
+      left: calc(50vw - 100px);
+    }
 
-  .card-dock .property-name,
-  .card-dock .property-location-title {
-    font-size: 20px;
-    letter-spacing: unset;
-  }
+    .selection-hint {
+      height: 110px;
+      top: 0;
+      /* top: -110px; */
+      left: calc(50vw - 148px);
+      /* right: unset; */
+      width: 286px;
+      transition: top ease 0.8s;
+    }
+    .selection-hint.sole-hint {
+      top: -110px;
+    }
+    .selection-hint.sole-hint.dismissed {
+      top: 0;
+      /* right: calc(50% - 148px); */
+    }
 
-  .property-value {
-    font-size: 20px;
-  }
-  .property-cell.expandible .property-value:not(.expanded) {
-    max-height: 49px;
-  }
+    .card-dock thead td {
+      font-size: 20px;
+      line-height: 32px;
+      height: 80px;
+      /* make room for trigger-icon */
+      padding-right: 40px;
+    }
+    
+    thead td .remove-icon {
+      width: 40px;
+      top: 12px;
+      right: 8px;
+    }
 
-  .property-cell .trigger-icon {
-    width: 30px;
-    right: 7px;
-    top: 20px;
-  }
+    .card-dock .property-name,
+    .card-dock .property-location-title {
+      font-size: 20px;
+      letter-spacing: unset;
+    }
 
-  .card-dock td {
-    padding: 22px;
-  }
+    .property-value {
+      font-size: 20px;
+    }
+    .property-cell.expandible .property-value:not(.expanded) {
+      max-height: 49px;
+    }
 
-  .card-dock-container.card-count-1 {
-    /* min-width: 325px; */
-    width: 100%;
-    max-width: unset;
-  }
-  .card-dock-container.card-count-2 {
-    /* min-width: 650px; */
-    width: 150%;
-    max-width: unset;
-  }
-  .card-dock-container.card-count-3 {
-    /* min-width: 975px; */
-    width: 200%;
-    max-width: unset;
-  }
+    .property-cell .trigger-icon {
+      width: 30px;
+      right: 7px;
+      top: 20px;
+    }
+
+    .card-dock td {
+      padding: 22px;
+    }
+
+    .card-dock-container.card-count-1 {
+      /* min-width: 325px; */
+      width: 100%;
+      max-width: unset;
+    }
+    .card-dock-container.card-count-2 {
+      /* min-width: 650px; */
+      width: 150%;
+      max-width: unset;
+    }
+    .card-dock-container.card-count-3 {
+      /* min-width: 975px; */
+      width: 200%;
+      max-width: unset;
+    }
+}
 }
 @media (max-width: 991px) {
 }
