--- a/src/App.scss
+++ b/src/App.scss
@@ -139,12 +139,21 @@ html, body, #root, .app, .map-container {
   font-weight: 700;
 }
 
-$FS-card-width: 300px;
-$FS-dock-width: $FS-card-width * 3;
+// COLORS
 $color-past: rgba(0,80,92,.8);
 $color-ongoing: rgba(175,105,12,.8);
 $color-proposed: rgba(223,70,73,.8);
 $light-gray: #f7f7f7;
+
+// SIZES
+$FS-card-width: 300px;
+$FS-dock-width: $FS-card-width * 3;
+$scroll-hint-width: 200px;
+$scroll-hint-height: 40px;
+$selection-hint-width: 230px;
+$selection-hint-height: 134px;
+
+$card-peek-height: 100px;
 
 /*{ CARD DOCK */
 .card-dock-container { //card-dock-wrapper
@@ -174,11 +183,11 @@ $light-gray: #f7f7f7;
     &.scroll-hint {
       text-align: center;
       position: absolute;
-      /* center hint above the cards - keep in sync with width */
-      left: calc(50% - 100px);
-      width: 200px; 
-      top: -40px;
-      height: 40px;
+      /* center hint above the first card */
+      left: calc((#{$FS-card-width} - #{$scroll-hint-width}) / 2);
+      width: $scroll-hint-width; 
+      top: -$scroll-hint-height;
+      height: $scroll-hint-height;
       animation: slide-up 1.2s forwards;
       &.dismissed {
         top: 100vh;
@@ -191,14 +200,20 @@ $light-gray: #f7f7f7;
     
     &.selection-hint {
       position: absolute;
-      /* NOTE: keep in sync with .card-dock-wrapper .card-dock-container top */
-      top: 100px;
-      right: -230px;
-      width: 230px;
-      transition: right ease 2s;
-      
+      top: $card-peek-height;
+      width: $selection-hint-width;
+      height: $selection-hint-height;
+      left: 0;
+      &:not(.scroll-initiated) {
+        visibility: hidden;
+      }
+      &.scroll-initiated {
+        transition: left ease 1s;
+        left: $FS-card-width;
+      }
       &.dismissed {
-        right: -100vw;
+        transition: left ease 1s;
+        left: 0;
       }
       .content {
         padding: 20px;
@@ -242,7 +257,7 @@ $light-gray: #f7f7f7;
     .card-table { //table.card-dock
       position: relative;
       /* top of card should stick up above window bottom */
-      top: -100px; //FS
+      top: -$card-peek-height; //FS
       // tough to mesh with card animation onto screen
       // box-shadow: rgba(0, 0, 0, 0.1) -2px -4px 10px 2px;
 
@@ -326,6 +341,7 @@ $light-gray: #f7f7f7;
           
           &:not(.expanded) {
             transition: max-height ease-out .2s;
+            // important because it has to override the inline style set by JS
             max-height: 75px !important;
             
             &:before {
@@ -351,7 +367,7 @@ $light-gray: #f7f7f7;
       .row.header {
         border-top-left-radius: 12px;
         border-top-right-radius: 12px;
-        height: 100px;
+        height: $card-peek-height;
 
         .card {
           border-top-width: 8px;
@@ -486,25 +502,17 @@ $light-gray: #f7f7f7;
 
     .user-hint{
       &.scroll-hint {
-        left: calc(50vw - 100px);
+        left: calc(50vw - (#{$scroll-hint-width} / 2));
       }
-  
       &.selection-hint {
-        height: 110px;
         top: 0;
-        /* top: -110px; */
-        left: calc(50vw - 148px);
-        /* right: unset; */
-        width: 286px;
-        transition: top ease 0.8s;
-
-        &.sole-hint {
-          top: -110px;
-          right: unset;
-
+        &.scroll-initiated {
+          transition: top ease 0.8s;
+          top: -$selection-hint-height;
+          left: calc(50vw - (#{$selection-hint-width}) / 2);
           &.dismissed {
+            transition: top ease 3s;
             top: 100vh;
-            /* right: calc(50% - 148px); */
           }
         }
       }
