--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,6 @@ $card-peek-height: 100px;
   margin: 0;
   padding: 0;
   word-wrap: break-word;
-  /* TODO: should we? (UI) */
   user-select: none;
   cursor: default;
   font-family: sofia-pro, sans-serif;
@@ -66,10 +65,10 @@ html, body, #root, .app, .map-container {
   width: 100%;
   z-index: 100;
   background-color: rgba(0,80,92,.4);
-  opacity: 100%;
+  opacity: 1;
   &.loaded {
     background-color: rgba(0,0,0,0);
-    opacity: 0%;
+    opacity: 0;
     transform: translate(100%, 100%);
     transition: background-color ease 2s, opacity ease 1s .5s, transform ease 0s 2s;
   }
