--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ $semi-trans-light-gray: transparentize($light-gray, .2);
 $trans-light-gray: transparentize($light-gray, .4);
 $middle-gray: #eee;
 $trans-middle-gray: transparentize($middle-gray, .5);
+$dark-gray: #ccc;
 
 // SIZES
 $FS-card-width: 300px;
@@ -22,6 +23,7 @@ $selection-hint-height: 134px;
 $max-point-hint-width: 425px;
 $max-point-hint-height: 85px;
 $card-peek-height: 100px;
+$intro-panel-width: 400px;
 
 * {
   margin: 0;
@@ -105,6 +107,60 @@ html, body, #root, .app, .map-container {
     }
   }
 }
+
+/* INTRO PANEL */
+.intro-panel {
+  position: fixed;
+  left: 0;
+  z-index: 3;
+  top: 8px;
+  bottom: 150px;
+  width: $intro-panel-width;
+  background: white;
+  overflow: scroll;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  transition: left ease 1s;
+
+  .info-icon {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    // background-color: white;
+  }
+
+  &.closed {
+    left: -$intro-panel-width;
+    .info-icon {
+      position: fixed;
+      left: 20px;
+    }
+  }
+
+  .content {
+    padding: 40px;
+    // height: 100%;
+    h1 {
+      font-size: 18px;
+      font-weight: 700;
+      border-bottom: 1px solid $dark-gray;
+      padding-bottom: 20px;
+      margin-bottom: 20px;
+    }
+    h2 {
+      font-size: 15px;
+      font-weight: 400;
+      padding: 10px 0 6px;
+    }
+    p {
+      font-size: 14px;
+      font-weight: 300;
+    }
+  }
+}
+
 
 /* MAP */
 .map-container {
