--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,8 @@ $trans-middle-gray: transparentize($middle-gray, .5);
 $dark-gray: #ccc;
 
 // SIZES
+$FS-boundary-padding: 8px;
+$SS-legend-height: 130px;
 $FS-card-width: 300px;
 $FS-dock-width: $FS-card-width * 3;
 $scroll-hint-width: 200px;
@@ -23,7 +25,8 @@ $selection-hint-height: 134px;
 $max-point-hint-width: 425px;
 $max-point-hint-height: 85px;
 $card-peek-height: 100px;
-$intro-panel-width: 400px;
+$intro-panel-width: 390px;
+$intro-panel-icon-offset: 10px;
 
 * {
   margin: 0;
@@ -113,29 +116,36 @@ html, body, #root, .app, .map-container {
   position: fixed;
   left: 0;
   z-index: 3;
-  top: 8px;
+  top: $FS-boundary-padding;
   bottom: 150px;
+  min-height: 120px;
   width: $intro-panel-width;
   background: white;
+  border: solid $dark-gray 1px;
   overflow: scroll;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   transition: left ease 1s;
 
   .info-icon {
-    height: 30px;
-    width: 30px;
+    stroke-width: 0;
+    height: 35px;
+    width: 35px;
     position: absolute;
-    right: 20px;
-    top: 20px;
-    // background-color: white;
+    right: $intro-panel-icon-offset;
+    top: $intro-panel-icon-offset;
+    transition: position ease .4s 1s;
+    path {
+      cursor: pointer;
+    }
   }
 
   &.closed {
     left: -$intro-panel-width;
     .info-icon {
       position: fixed;
-      left: 20px;
+      left: calc(#{$FS-boundary-padding} + #{$intro-panel-icon-offset});
+      top: calc(#{$FS-boundary-padding} + #{$intro-panel-icon-offset});
     }
   }
 
@@ -157,6 +167,7 @@ html, body, #root, .app, .map-container {
     p {
       font-size: 14px;
       font-weight: 300;
+      padding: 4px 0;
     }
   }
 }
@@ -172,8 +183,8 @@ html, body, #root, .app, .map-container {
 /* LEGEND */
 .legend {
   position: fixed;
-  top: 8px;
-  right: 8px;
+  top: $FS-boundary-padding;
+  right: $FS-boundary-padding;
   background: $semi-trans-light-gray;
   padding: 8px;
   border-radius: 4px;
@@ -571,12 +582,30 @@ html, body, #root, .app, .map-container {
 }
 
 @media (max-width: 2 * $FS-card-width) {
+  /* INTRO PANEL */
+  .intro-panel {
+    top: calc(#{$SS-legend-height} + #{$FS-boundary-padding});
+    bottom: $FS-boundary-padding;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+
+    &.closed {
+      left: -100%;
+
+      .info-icon {
+        top: calc(#{$SS-legend-height} + #{$FS-boundary-padding} + #{$intro-panel-icon-offset});
+      }
+    }
+  }
+
   /* LEGEND */
   .legend {
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
+    height: $SS-legend-height;
     padding: 0;
     background: white;
   }
